k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: ClusterIP

  selector:
    app: fastapi

  ports:
    - name: http
      port: 80
      targetPort: http
